build_error.txt

> alloflow@0.9.0 build
> react-scripts build

node.exe : 
(node:70952) 
[DEP0176] 
DeprecationWarning: 
fs.F_OK is 
deprecated, use 
fs.constants.F_OK 
instead
At line:1 char:1
+ & "C:\Program Files\
nodejs/node.exe" 
"C:\Program 
Files\nodejs/node_mo 
...
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: ((node:7095   
 2) [D...ts.F_OK i    
nstead:String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
(Use `node 
--trace-deprecation 
...` to show where 
the warning was 
created)
Creating an optimized production build...
Failed to compile.

SyntaxError: C:\Users\cabba\OneDrive\Desktop\UDL-Tool-Updated\prismflow-deploy\src\App.jsx: Adjacent JSX elements must be wrapped in an enclosing tag. Did you want a JSX fragment <>...</>? (8529:20)
[0m [90m 8527 |[39m                             )}
 [90m 8528 |[39m                         [33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
[31m[1m>[22m[39m[90m 8529 |[39m                     [33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
 [90m      |[39m                     [31m[1m^[22m[39m
 [90m 8530 |[39m                 )}
 [90m 8531 |[39m             [33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
 [90m 8532 |[39m         [33m<[39m[33m/[39m[33mdiv[39m[33m>[39m[33m,[39m[0m


